; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/heap/extr_heapam_handler.c_heapam_estimate_rel_size.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/heap/extr_heapam_handler.c_heapam_estimate_rel_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HEAP_OVERHEAD_BYTES_PER_TUPLE = common dso_local global i32 0, align 4
@HEAP_USABLE_BYTES_PER_PAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*, i32*, double*, double*)* @heapam_estimate_rel_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @heapam_estimate_rel_size(i32 %0, i32* %1, i32* %2, double* %3, double* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca double*, align 8
  %10 = alloca double*, align 8
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store double* %3, double** %9, align 8
  store double* %4, double** %10, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32*, i32** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load double*, double** %9, align 8
  %15 = load double*, double** %10, align 8
  %16 = load i32, i32* @HEAP_OVERHEAD_BYTES_PER_TUPLE, align 4
  %17 = load i32, i32* @HEAP_USABLE_BYTES_PER_PAGE, align 4
  %18 = call i32 @table_block_relation_estimate_size(i32 %11, i32* %12, i32* %13, double* %14, double* %15, i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @table_block_relation_estimate_size(i32, i32*, i32*, double*, double*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
